Added new decompiler fernflower. Made loading decompilers dynamically.